[b]Fixes[/b]
*The Reputation bar should have its width correctly set on login.