@@ -105,6 +105,7 @@ G['skins'] = {
 		["encounterjournal"] = true,
 		["voidstorage"] = true,
 		["transmogrify"] = true,
+		["stable"] = true,
 	},
 }
 
