@@ -47,4 +47,5 @@
 	<Script file='bags.lua'/>
 	<Script file='transmogrification.lua'/>
 	<Script file='voidstorage.lua'/>
+	<Script file='stable.lua'/>
 </Ui>
