@@ -1,2 +1,5 @@
+[b]Additions[/b]
+*Add skin for the blizzard stable frame.
+
 [b]Fixes[/b]
 *The Reputation bar should have its width correctly set on login.
